--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Infinite Scroll - Quotes</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
             <div></div>
         </div>
     </div>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
